--- a/frontend/src/components/Toolbar/index.module.css
+++ b/frontend/src/components/Toolbar/index.module.css
@@ -1,4 +1,3 @@
-
 .container {
   position: absolute;
   left: 50%;
@@ -12,6 +11,15 @@
   border: 1px solid #9ca3af;
   transform: translateX(-50%);
   box-shadow: 1px 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.toolItems {
+  display: flex;
+  align-items: center;
+}
+
+.toolItems:first-child {
+  margin-right: 1rem;
 }
 
 .toolItem {
